--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -20,6 +20,61 @@ Un système complexe est un système dans lequel de nombreux composant interagis
 
 Cette émergence de comportement est étudiée dans les réseaux biologique, et a été beaucoup utilisée pour la création de nouveaux paradigmes d'apprentissage automatiques. }
 
+
+
+The notion of emergent computation has been introduced in the 90s to describe a system composed of several agents, following rules and interacting one to another \cite{Forrest1990EmergentCS}. As the interactions are non-linear, the global system has complex behavior emerging from the interaction of the components. It is a complex system.
+This notion has been applied to a wide range of computing concepts such programming languages, database search or parallel computing. 
+In the field of machine learning algorithms, emergent computation sounds in the field of unconventional computing. Swarm intelligence, \cite{Bonabeau1999SwarmI} for example, applies emergent processes to machine learning. Simple agents following learning rules could, by collaboration, globally present complex learning abilities. Let us cite as example biological and artificial neurons. 
+Complex systems are described by their capacity of self-organization, which is the complex behaviour and patterns emerging from the entire system. In seems then natural to explore how to assemble learning structures already based on self-organisation rules or local computation. The main self-organization algorithms are, on one hand, neuron populations reacting to local firing rules, like STDP. An other category is self-organizing maps \cite{Kohonen1982} and its many variants ( growing maps [ref], tree-structured SOM [ref] ). These algorithms are directly inspired by the functioning of the human brain. Indeed, many areas of the brain, sensory and associative, are modeled by topographic maps [ref]. Associating self-organizing algorithm has then a  direct biological inspiration.
+Then, a great example of how the association of several models has lead to more complex system is deep learning : altough perceptrons were in theory able to represent most systems, their combination in multi layer neural networks has opened a lot of new possibilities for machine learning. 
+
+Finally, Emergent computation is then still a field to explore with the development of neuromorphic substrates.
+
+In this work, we explore several architectures based on self-organizing neural networks. We investigate in particular
+
+\section{Définir la modularité}
+
+
+\section{Avantages des systèmes modulaires}
+
+
+\section{Réseaux de neurones modulaires}
+
+\subsection{Réseaux bio-inspirés}
+
+De nombreux travaux de biologie observent des co-activations entre les zones du cerveaux. Le cortex cérébral est ainsi être considéré comme un reseaux de neurone modulaires, avec des régions s'activant entre elles. \cite{primate_cortex_91,mountcastle_columnar_1997,Harriger2012RichCO}
+
+Ces coactivations aient été observées expérimentalement. Plusieurs modèles en neurosciences computationnelles ont été proposés pour expliquer ce phénomènes. Les modèles les plus communs sont la zone de convergence-divergence de Damasio (CDZ) \cite{damasio_time-locked_1989}, et le modèle de boucles de réentrées de Edelmann \cite{Edelman1982GroupSA}.
+
+
+ CDZ holds that specific cortical areas act as sets of pointers to other areas , and therefore connect several brain networks. The reentry theory hypothezise direct bidirectional exchanges between several brain areas. Those theories are a biological inspiration to create and connect modular networks.
+The models inspired by those theories are mostly based on spiking neural networks. Indeed, those networks are 
+Let us cite as example \cite{electronics9101605}
+
+%TODO : 
+
+\subsection{Architectures de cartes auto-organisatrices}
+
+Contrairement aux réseaux impulsionnels qui utilisent des règles d'activation à l'échelle d'un neurone, les cartes auto-organisatrices (SOM) et de ses variantes (GSOM, Tree SOM) définissent des règles de calcul à l'échelle de la carte. Ces calculent s'appuient sur sur les distances et le voisinage, imitant les règles locales ; on parle donc de processus d'auto-organisation. Les motifs d'activation qu'ils développent sont alors similaires à ceux que l'on retrouve dans des zones cérébrales telles que le cortex visuel.
+Il est donc pertinent d'étudier comment plusieurs cartes peuvent être connectées pour réaliser un calcul décentralisé.
+De nombreux travaux utilisent des modèles incluant plusieurs cartes auto-organisatrices; mais la plupart de ces architectures sont conçues pour une application spécifique.
+On ne peut donc pas parler de modèles modulaires. Certains travaux ont cependant développé des modèles modulaires conçus en combinant les cartes comme un nouveau modèle générique et exploiter les communications.
+
+Dès que les SOMs ont été introduits, une version hiérarchique a été proposée, HSOM : \cite{lampinen_clustering_1992,koikkalainen_self-organizing_1990} . Dans HSOM, une carte apprend des données comme une première couche et transmet l'index de son BMU comme entrée à une deuxième carte. Les auteurs ont observé que la deuxième carte a une capacité de regroupement plus précise qu'une seule carte. Étonnamment, ce modèle n'est pas largement utilisé. Certaines variantes de HSOM ont été proposées par la suite, comme l'arbre d'architecture croissante soms [ref], où l'architecture hiérarchique est de plus en plus conçue pour s'adapter à l'ensemble des données. Dans ce cas, l'activité entière d'une carte est transmise en entrée aux couches supérieures. (Citons également [baruque])
+Ces architectures hiérarchiques : commentaire
+Dans \cite{dominey13}, les auteurs construisent des architectures hiérarchiques en transmettant les positions des BMU entre les cartes multimodales. L'inspiration est tirée du cadre CDZ.
+D'autre part, certains travaux visent à connecter les cartes entre elles de manière directe, en se rapprochant de la théorie de la rentrée d'Edelman. C'est le cas de A-SOM : combiner des cartes.
+
+Certains travaux développent des cartes modulaires où les connexions entre cartes sont créées neuronalement. C'est le cas de l'algorithme SOIMA \cite{SOIMA}, où les connexions entre neurones sont apprises avec une règle hébraïque alors que l'apprentissage se fait dans chaque carte : les neurones qui s'activent ensemble voient leur poids de connexion renforcé.
+
+Traduit avec www.DeepL.com/Translator (version gratuite)
+
+\subsection{Discussion}
+There are several way to connect maps together. 
+One is by combining activity calculation, such as RSOM, A-SOM.
+
+The last one is by transmitting a element from a map as an input to another one; it can be whole set of activities, such as voeglin, weights (MSOM), or the index of the best matching unit (dominey, SOMSD, CxSOM). The transmission of only the best matching unit index is particularly interesting, as it reduces the state of a map to a small-dimension vector (usually 2 dimensional), indifferently to the dimension of the map's weights. 
+
 %
 %
 %
