--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \usepackage{graphicx}
 \usepackage[absolute]{textpos} 
 \usepackage{colortbl}
-\usepackage{amsthm}
+\usepackage{amsmath}
 \usepackage{array}
 \usepackage{url}
 \usepackage{algorithm2e}
@@ -72,13 +72,10 @@
 \input{02-SOM/SOM}
 \input{03-Representation/Representation}
 %\input{03-Algorithme/Algorithme}
-
-\draft{
 \input{04-Analyse/Analyse}
-}
 \input{Conclusion}
 %Bibliography files
-\bibliography{01-Modularite/biblio_modularite.bib,03-Representation/biblio_representation.bib}
+\bibliography{01-Modularite/biblio_modularite.bib,01-Modularite/biblio_reseaux.bib, 03-Representation/biblio_representation.bib}
 
 \bibliographystyle{plain}
 \end{document}
