--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 \usepackage[absolute]{textpos} 
 \usepackage{colortbl}
 \usepackage{amsmath}
+\usepackage{amsthm}
 \usepackage{array}
 \usepackage{url}
 \usepackage{algorithm2e}
@@ -36,7 +37,7 @@
 \usepackage{mathtools}
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
-
+\newtheorem{proposition}{Proposition}
 %draft/release options
 \newif\ifDraft
 \newcommand\comment[1]{\ifDraft {\itshape\color{red}{#1}} \fi} %text displayed in draft mode as comments
@@ -73,6 +74,7 @@
 \input{03-Representation/Representation}
 %\input{03-Algorithme/Algorithme}
 \input{04-Analyse/Analyse}
+\input{05-Application/Application}
 \input{Conclusion}
 %Bibliography files
 \bibliography{01-Modularite/biblio_modularite.bib,01-Modularite/biblio_reseaux.bib, 03-Representation/biblio_representation.bib}
