--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+
 %Documentclass thesul modifée pour la page de garde : thesul-cs
 \documentclass[11pt]{thesul-cs}
 \usepackage[utf8]{inputenc}
@@ -38,6 +39,7 @@
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
 \newtheorem{proposition}{Proposition}
+
 %draft/release options
 \newif\ifDraft
 \newcommand\comment[1]{\ifDraft {\itshape\color{red}{#1}} \fi} %text displayed in draft mode as comments
@@ -62,20 +64,21 @@
 %def path for files
 \input{Notations.tex}
 
+%compile only a chapter
 
 \begin{document}
 \dominitoc
-\input{titlepage}
+\include{titlepage}
 \tableofcontents
-\input{00-Introduction/Introduction}
+\include{00-Introduction/source}
 \mainmatter
-\input{01-Modularite/Modularite}
-\input{02-SOM/SOM}
-\input{03-Representation/Representation}
+\include{01-Modularite/source}
+\include{02-SOM/source}
+\include{03-Representation/source}
 %\input{03-Algorithme/Algorithme}
-\input{04-Analyse/Analyse}
-\input{05-Application/Application}
-\input{Conclusion}
+\include{04-Analyse/source}
+\include{05-Application/source}
+\include{Conclusion}
 %Bibliography files
 \bibliography{01-Modularite/biblio_modularite.bib,01-Modularite/biblio_reseaux.bib, 03-Representation/biblio_representation.bib}
 
